styles/scss/vtex.flex-layout.scss
/* ... */
.flexRow--recommended-you {
  @media screen and (max-width: em(768px)) {
    margin-bottom: 0px;
  }

  :global(.vtex-shelf-1-x-title) {
    display: none;
  }
}

.flexRow--menu-link {
  background-color: #f4f4f4;
  padding-left: 0;
  padding-right: 0;
  padding-top: 0px;
  overflow: hidden;
  justify-content: flex-start;
  .flexRowContent--menu-link {
    max-width: 1366px;
    margin: 0 auto;
    justify-content: space-between;
    background-color: #f4f4f4;
  }
}
.flexRowContent--menu-logo {
  align-items: center;
  height: 100%;
}
.flexRow--timecount1 {
  display: flex;
  align-items: center;
}
.flexRow--main-header-mobile-search {
  align-items: center;
  padding: 0.5rem;
  justify-content: center;
  :first-child {
    :global(.vtex-store-components-3-x-searchBarContainer) {
      :global(.vtex-search-1-x-itemListList) {
        :global(.vtex-search-1-x-itemListItem) {
          line-height: 15px;
        }
      }
      :global(.vtex-search-1-x-tileListItem) {
        :global(.vtex-search-1-x-element) {
          padding: 0 20px 5px 20px;
          &:hover {
            background: #fff;
          }
          :global(.vtex-search-1-x-price_listPrice) {
            font-size: 12px;
            color: rgba(0, 0, 0, 0.38);
            text-decoration: line-through;
          }
          :global(.vtex-search-1-x-price_sellingPrice) {
            color: $primary;
          }
        }
      }

      :global(.vtex-search-1-x-itemListPrefix),
      :global(.vtex-search-1-x-imageContainer),
      :global(.vtex-search-1-x-image) {
        width: auto !important;
      }
    }
  }

  :global(.vtex__icon-close),
  :global(.vtex-store-components-3-x-suffixWrapper) {
    width: inherit !important;
    padding: 0;
  }
}
:global(.vtex-store-components-3-x-searchBarIcon--clear) {
  padding: 10px;
}
.flexRowContent--group-cencosud {
  align-items: center;
}
.flexRowContent--main-header-mobile {
  align-items: center;
  padding: 0 0.5rem;
  justify-content: center;
}
@media screen and (max-width: 768px) {
  .flexRowContent--row-services {
    display: flex;
    flex-wrap: wrap;
    .stretchChildrenWidth {
      width: 50% !important;
      .flexRowContent--two-cols {
        flex-direction: column;
      }
    }
  }
}
.flexRow--main-header-mobile-search,
.flexRow--main-header-mobile {
  background-color: #f4f4f4;
  height: auto;
  margin-top: 0;
  margin-bottom: 0;
}
.flexCol--filterCol {
  max-width: 500px;
  min-width: 230px;
}

.flexCol--productCountCol {
  align-items: flex-start;
}

.flexCol--orderByCol {
  align-items: flex-end;
}

.flexCol--orderByMobileCol {
  width: 42%;
}

.flexCol--filterMobileCol {
  width: 38%;
}

.flexCol--switcherMobileCol {
  width: 20%;
}

.flexRow--quickviewMainRow {
  display: flex;
  max-height: 100%;
  :global(.vtex-store-components-3-x-container) {
    width: 100%;
  }
}

.flexRow--addToCartRow {
  padding-bottom: 1rem;
}

.flexRow--col-images-banner {
  .flexRowContent--col-images-banner {
    display: block;
    .stretchChildrenWidth {
      width: 100% !important;
      padding: 0;
      &:first-child {
        margin-bottom: 0.7em;
      }
    }
  }
}

.flexRow--shelf-home-row-bottom {
  background: $gray-light;
  position: relative;
  margin-bottom: 3em;

  &::before {
    $width: 27px;

    content: "";
    position: absolute;
    bottom: 100%;
    left: 50%;
    margin-left: -($width/2);

    @include up_mark($width);
  }
}

:global(.vtex-store-components-3-x-imageElement--image-surprise) {
  -webkit-transition: all 0.4s ease-in-out;
  transition: all 0.4s ease-in-out;
  box-shadow: 0 3px 8px 0 rgba(135, 139, 169, 0.2);
  &:hover {
    -webkit-transform: scale(1.07);
    transform: scale(1.07);
  }
}

:global(.vtex-rich-text-0-x-paragraph--title-surprise) {
  margin-left: 18px;
  margin-bottom: 20px;
  margin-top: 16px;
  color: #525252;
  font-size: 24px;
  font-weight: bold;
  letter-spacing: normal;
  @media screen and (max-width: em(768px)) {
    font-size: 20px;
  }
}

:global(.vtex-rich-text-0-x-paragraph--subtitle-surprise) {
  line-height: 1.33;
  letter-spacing: 0;
  color: #333333;
  font-size: 18px;
  @media screen and (max-width: em(768px)) {
    font-size: 12px;
  }
  &::after {
    content: "";
    background: url(https://gbarbosa.vteximg.com.br/arquivos/arrow-black-right.svg) no-repeat;
    width: 30px;
    height: 22px;
    display: block;
    position: absolute;
    background-size: 23px 16px !important;
    right: 0px;
    top: 23px;
    @media screen and (max-width: em(768px)) {
      width: 12px;
      right: 0px;
      background-size: 15px 12px !important;
      top: 15px;
    }
  }
}

:global(.vtex-rich-text-0-x-container--subtitle-surprise) {
  justify-content: center;
  position: relative;
}

:global(.vtex-store__template) {
  background-color: #fff;
}

.flexRowContent--recommended-you {
  :global(.vtex-shelf-1-x-container) {
    padding-bottom: 0px;
  }
  :global(.vtex-shelf-1-x-slide) {
    padding-top: 3px;
    padding-bottom: 32px;
  }
}

// FOOTER
.flexRow--footer-social-bottom {
  margin-top: 28%;
  .flexRowContent--footer-social-bottom {
    display: flex;
    align-items: center;
    justify-content: space-around;
    .stretchChildrenWidth {
      justify-content: center !important;
    }
  }
  @media screen and  (max-width:768px){
    margin-top: 0;
    display: flex;
    &::before {
      content: "Segurança:";
      font-weight: 600;
      color: #fff;
    }
    .flexRowContent--footer-social-bottom {
      justify-content: flex-start;
      .stretchChildrenWidth {
        width: auto !important;
        margin-right: 40px;
        margin-left: 30px;
      }
    }
  } 
}
.flexColChild--footer-logo {
  margin: 0 auto;
  margin-top: 18px;
}
.flexColChild--footer-1-mobile {
  :global(.vtex-menu-2-x-submenuAccordion--subcategory) {
    padding-bottom: 1em;
  }
  .flexCol--footer-social {
    justify-content: center;
  }
}
.flexCol--footer-social {
  display: flex;
  flex-direction: row;
}
/* ... */

